--- a/src/assets/scss/components/post-share.scss
+++ b/src/assets/scss/components/post-share.scss
@@ -11,6 +11,7 @@
     box-shadow: var(--shadow-xs);
     border: 1px solid var(--border-color);
     padding: .75rem;
+    margin: 0;
     display: inline-flex;
     align-items: center;
     color: var(--icon-color);
